 * Object matching (a la locate()) with an exit as the looker didn't work
   correctly. Reported by Covenent. [MG]
 * Panic database dumps weren't always loading correctly. Reported by [MG],
   fixed by [SW].
 * A missing mail or chat database caused failures in mush startup. Reported
   by Nveid. [SW]
 * Various fixes to update-cnf.pl by Minion.

Version 1.8.4 patchlevel 3                                 Mar 18,  2011

Events:
 * Event system added. Certain things can now trigger events using @config
   event_handler. See "help events" and "help event <type>". [GM]
 * dump events: dump`5min, dump`1min, dump`complete.
 * object events: object`create, object`destroy, object`move,
   object`rename, object`kill.
 * sql events: sql`connect, sql`disconnect.
 * signal events: signal`usr1, signal`usr2.
 * player events: player`create, player`fail, player`connect,
   player`disconnect, player`inactivity.
 * socket events: socket`connect, socket`disconnect
 * database events: db`dbck, db`purge, db`wcheck
 * Periodic system events like warnings checks and db consistency
   checks are now handled by a timed queue and integrated with
   softcode events. Local hackers: This involves changes to
   local.c. If you have no changes in local.c, just delete the file.
   Otherwise, see HACKING.184 for more info. [SW]

Commands:
 * @hook/override/inplace - You can now run softcode with the same priority
   as hardcode! [GM]
 * @lock (and all lock keys) now accepts NAME^<pattern> for matching against
   an object's name. [GM]
 * @mapsql passes row results to attributes. Suggested by Mercutio. [GM]
 * @dig now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * The help command now does some auto-expansion of topics. For example,
   'help @chan ad2' will be expanded to match 'help @channel admin2'. [MG]
 * @force/inplace, @switch/inplace and @select/inplace now run their commands